edificar completado (Casilla.java), edificios añadidos a las descripciones